--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "@testing-library/react": "^11.2.5",
     "@testing-library/user-event": "^12.8.3",
     "bootstrap": "^4.6.0",
+    "dotenv": "^10.0.0",
     "jquery": "^3.6.0",
     "leaflet": "^1.7.1",
     "popper.js": "^1.16.1",
