--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "react-bootstrap": "^1.5.2",
     "react-dom": "^17.0.2",
     "react-leaflet": "^3.1.0",
+    "react-leaflet-google-layer": "^2.0.4",
     "react-scripts": "4.0.3",
     "web-vitals": "^1.1.1",
     "web3": "^1.3.4"
@@ -38,8 +39,8 @@
     "not ie <= 11",
     "not op_mini all"
   ],
-  "engines": { 
+  "engines": {
     "node": "14.17.0",
     "npm": "6.14.13"
-  } 
+  }
 }
